# Circadian-Lingo

./: .gitignore  DESIGN.md  README.md  flutter_launcher_icons.yaml  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  VadBridge.cpp  VadBridge.h
android/app/src/main/kotlin/com/example/circadian_lingo/: AudioCaptureService.kt  AudioDecoderHelper.kt  AudioNotificationReceiver.kt  AudioProcessorJni.kt  AudioScheduleWorker.kt  AudioWorkManager.kt  BootReceiver.kt  (+15 more)
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
assets/stitch/: daily_lesson_meta.json  dashboard_meta.json  dialogues_meta.json  flashcards_meta.json  privacy_meta.json  quizzes_meta.json  stories_meta.json  word_cards_meta.json
lib/: main.dart
lib/models/: alu.dart  alu_parser.dart  word_review_record.dart
lib/providers/: audio_pipeline_provider.dart  daily_captures_provider.dart  lesson_provider.dart  model_provider.dart  settings_provider.dart  ui_strings_provider.dart
lib/screens/: daily_lesson_screen.dart  dashboard_screen.dart  lesson_flow_screen.dart  onboarding_screen.dart  privacy_dashboard_screen.dart  progress_screen.dart
lib/services/: audio_pipeline_service.dart  fsrs_service.dart  learned_words_service.dart  storage_cleanup_service.dart
lib/theme/: app_theme.dart  colors.dart  lesson_theme.dart  typography.dart
lib/utils/: language_names.dart  lesson_flow_utils.dart
lib/widgets/: ambient_background.dart  custom_bottom_nav.dart  dialogue_widget.dart  flashcard_swiper_widget.dart  glass_app_bar.dart  glass_card.dart  lesson_progress_header.dart  organic_listening_button.dart  quiz_widget.dart  searchable_language_selector.dart  story_widget.dart  word_bottom_sheet.dart  word_card_widget.dart
test/: widget_test.dart
